fix simple sample overflowing on minimized window

--- a/examples/simple/style.css
+++ b/examples/simple/style.css
@@ -14,10 +14,15 @@ html, body {
 	background-position: center center;
 }
 
+#wrap {
+	height: 100%;
+	overflow: hidden; /* solves the tricky padding */
+}
+
 #editor {
 	box-sizing: border-box;
 	height: 100%;
-	padding: 10px;
+	padding: 10px; /* this padding is tricky, it pushes out content outside of client-area when minimized */
 	font-family: monospace;
 	white-space: pre-wrap;
 	overflow: auto;
